# graphite

./: .gitignore  .gitmodules  CMakeLists.txt  graphite.kdev4  main.cpp
include/: graphite.h  mesh.h  renderObject.h  renderer.h  shader.h  sprite.h  transform.h
src/: CMakeLists.txt  graphite.cpp  mesh.cpp  pipeline.cpp  pipeline.h  renderObject.cpp  renderer.cpp  shader.cpp  sprite.cpp  transform.cpp  wgpu_utils.cpp  wgpu_utils.h
src/render/: CMakeLists.txt  buffer.cpp  buffer.h  renderGroup.cpp  renderGroup.h
src/renderGroup/: CMakeLists.txt  renderGroup.cpp  renderGroup.h
src/shader/: CMakeLists.txt  shader.cpp  shader.h
src/shaders/: CMakeLists.txt  basic.fragment.wgsl  basic.vertex.wgsl
src/utils/: CMakeLists.txt  wgpu_utils.cpp  wgpu_utils.h
